# stm32-rust

./: .gitignore
stm32_discovery/: Cargo.toml  README.md  basic_linker.ld
stm32_discovery/.cargo/: config
stm32_discovery/src/: main.rs  register.rs  startup.rs  systick.rs  utils.rs
stm32_discovery/src/periphs/: gpio.rs
stm32_discovery/src/register/: priority_mask.rs
stm32_discovery/src/startup/: entry.rs  interrupts.rs
stm32_discovery/src/utils/: critical_section.rs
stm32f303xc_pac/: Cargo.toml
stm32f303xc_pac/src/: can.rs  crc.rs  dma1.rs  lib.rs  rtc.rs  tim1.rs  tim15.rs  tim16.rs  tim17.rs  tim3.rs  usart1.rs
stm32f303xc_pac/src/adc1/: awd2cr.rs  awd3cr.rs  calfact.rs  cfgr.rs  cr.rs  difsel.rs  dr.rs  ier.rs  isr.rs  jdr1.rs  jdr2.rs  jdr3.rs  jdr4.rs  jsqr.rs  ofr1.rs  ofr2.rs  ofr3.rs  ofr4.rs  smpr1.rs  smpr2.rs  sqr1.rs  sqr2.rs  sqr3.rs  sqr4.rs  tr1.rs  tr2.rs  tr3.rs
stm32f303xc_pac/src/adc1_2/: ccr.rs  cdr.rs  csr.rs
stm32f303xc_pac/src/can/: btr.rs  esr.rs  f0r1.rs  f0r2.rs  f10r1.rs  f10r2.rs  f11r1.rs  f11r2.rs  f12r1.rs  f12r2.rs  f13r1.rs  f13r2.rs  f14r1.rs  f14r2.rs  f15r1.rs  f15r2.rs  f16r1.rs  f16r2.rs  f17r1.rs  f17r2.rs  f18r1.rs  f18r2.rs  f19r1.rs  f19r2.rs  f1r1.rs  f1r2.rs  f20r1.rs  f20r2.rs  f21r1.rs  f21r2.rs  f22r1.rs  f22r2.rs  f23r1.rs  f23r2.rs  f24r1.rs  f24r2.rs  f25r1.rs  f25r2.rs  f26r1.rs  f26r2.rs  (+50 more)
stm32f303xc_pac/src/comp/: comp1_csr.rs  comp2_csr.rs  comp3_csr.rs  comp4_csr.rs  comp5_csr.rs  comp6_csr.rs  comp7_csr.rs
stm32f303xc_pac/src/crc/: cr.rs  dr.rs  dr16.rs  dr8.rs  idr.rs  init.rs  pol.rs
(+412 files in other folders)
