[package]
name = "stm32_discovery"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
critical-section = { version = "1.1.1", features = ["restore-state-bool"] }
stm32f303xc_pac = { path = "../stm32f303xc_pac", features = ["critical-section"] }
vcell = "0.1.3"
